# oops-mini-project

./: README.md
library-management/backend/: CMakeLists.txt
library-management/backend/data/: admins.txt  books.txt  fines.txt  members.txt  transactions.txt
library-management/backend/include/: Admin.h  Book.h  Exceptions.h  FileHandler.h  Fine.h  Library.h  LibraryItem.h  Person.h  Reservation.h  Student.h  Transaction.h
library-management/backend/src/: Admin.cpp  Book.cpp  Fine.cpp  Library.cpp  LibraryItem.cpp  Person.cpp  Reservation.cpp  Student.cpp  Transaction.cpp  main.cpp
library-management/bridge/: package-lock.json  package.json  server.js
library-management/bridge/routes/: auth.js  books.js  dashboard.js  fines.js  members.js  reservations.js  transactions.js
library-management/bridge/utils/: callCpp.js  fileParser.js
library-management/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
library-management/frontend/src/: App.jsx  index.css
library-management/frontend/src/components/: BookCard.jsx  Modal.jsx  Navbar.jsx  SearchBar.jsx  Sidebar.jsx  StatCard.jsx  ThemeToggle.jsx
library-management/frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
library-management/frontend/src/pages/: BookDetail.jsx  Books.jsx  Dashboard.jsx  Fines.jsx  History.jsx  IssueReturn.jsx  Login.jsx  Members.jsx  MyBorrows.jsx  Reservations.jsx
